--- a/ConnecTING-CTING/Base.lproj/Main.storyboard
+++ b/ConnecTING-CTING/Base.lproj/Main.storyboard
@@ -3,61 +3,178 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--thetableview-->
-        <scene sceneID="xxM-nf-mnt">
+        <!--Tab Bar Controller-->
+        <scene sceneID="V4t-gw-YCN">
             <objects>
-                <tableViewController id="O9B-ZF-oqt" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="EZf-UL-uZC">
+                <tabBarController modalPresentationStyle="fullScreen" id="B5L-jj-uXE" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Oze-3V-Mqg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Hvj-Oi-7aQ" kind="relationship" relationship="viewControllers" id="pUQ-fN-JCT"/>
+                        <segue destination="ImY-nr-ons" kind="relationship" relationship="viewControllers" id="Z6c-V9-1NR"/>
+                        <segue destination="ydu-es-vuJ" kind="relationship" relationship="viewControllers" id="uk6-u4-ORL"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TAp-xK-B1W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="225" y="935"/>
+        </scene>
+        <!--Q&A-->
+        <scene sceneID="h8d-5D-u93">
+            <objects>
+                <tableViewController id="Hvj-Oi-7aQ" customClass="QNATableViewController" customModule="ConnecTING_CTING" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="uiv-qX-Pkm">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <navigationBar key="tableHeaderView" contentMode="scaleToFill" id="v3j-hr-WC8">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <items>
+                                <navigationItem title="IDONTKNOW" id="GAs-qg-jzi">
+                                    <barButtonItem key="rightBarButtonItem" title="Question" id="QPD-bl-fvs">
+                                        <connections>
+                                            <action selector="questionButton:" destination="Hvj-Oi-7aQ" id="RkQ-Sp-sBQ"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </navigationItem>
+                            </items>
+                        </navigationBar>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="321" id="l85-75-wYO">
+                                <rect key="frame" x="0.0" y="68.5" width="414" height="321"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="l85-75-wYO" id="oi6-n6-yda">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="321"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Hvj-Oi-7aQ" id="PPz-E7-2sB"/>
+                            <outlet property="delegate" destination="Hvj-Oi-7aQ" id="3Po-vi-Pzs"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Q&amp;A" image="questionmark.folder.fill" catalog="system" id="QvK-Lx-ltF"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <segue destination="ZfC-N6-ecy" kind="presentation" identifier="questionSegue" id="FpX-Yo-C1y"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="n0L-5i-KwC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1113.0434782608697" y="691.74107142857144"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="G9P-sQ-hAy">
+            <objects>
+                <viewController id="ZfC-N6-ecy" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="j0I-uU-GVo">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Yly-MG-427"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="h0W-vB-Gux" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2046" y="692"/>
+        </scene>
+        <!--Ideas-->
+        <scene sceneID="vtV-7C-8PK">
+            <objects>
+                <tableViewController id="ImY-nr-ons" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="TzX-zH-djt">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="dOb-18-z0s">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="SEb-TN-etd">
                                 <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dOb-18-z0s" id="GjJ-eQ-MLF">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="SEb-TN-etd" id="Xwr-Wl-PNl">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="O9B-ZF-oqt" id="11C-tW-8yt"/>
-                            <outlet property="delegate" destination="O9B-ZF-oqt" id="OwL-oi-erc"/>
+                            <outlet property="dataSource" destination="ImY-nr-ons" id="lyL-nR-cOB"/>
+                            <outlet property="delegate" destination="ImY-nr-ons" id="v7g-Iq-Dm9"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="thetableview" id="diO-n9-e1p"/>
+                    <tabBarItem key="tabBarItem" title="Ideas" image="exclamationmark.bubble.fill" catalog="system" id="NMk-aZ-90B"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="uPj-Dt-o52" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IWq-Hc-5a7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1035" y="564"/>
+            <point key="canvasLocation" x="1113" y="1354"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="6yT-j1-SUs">
+        <!--Settings-->
+        <scene sceneID="5NT-g2-tRd">
             <objects>
-                <navigationController modalPresentationStyle="fullScreen" id="Sr1-jP-PZL" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="bEw-t1-fl8">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
+                <tableViewController id="ydu-es-vuJ" customClass="SettingsTableViewController" customModule="ConnecTING_CTING" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="0Kl-K7-Cf5">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <sections>
+                            <tableViewSection id="WHD-7m-fqQ">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="signoutTableViewCell" id="GTk-Om-wEb" customClass="signoutTableViewCell" customModule="ConnecTING_CTING" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GTk-Om-wEb" id="49d-U8-HEl">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vWO-eh-gpM">
+                                                    <rect key="frame" x="20" y="6" width="63" height="32"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <state key="normal" title="Sign Out">
+                                                        <color key="titleColor" name="AccentColor"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="signout:" destination="ydu-es-vuJ" eventType="touchUpInside" id="aXz-Z2-14P"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="vWO-eh-gpM" firstAttribute="centerY" secondItem="49d-U8-HEl" secondAttribute="centerY" id="xPp-TA-dJx"/>
+                                                <constraint firstItem="vWO-eh-gpM" firstAttribute="leading" secondItem="49d-U8-HEl" secondAttribute="leadingMargin" id="xfW-XX-Bku"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="ydu-es-vuJ" id="EKr-It-rxD"/>
+                            <outlet property="delegate" destination="ydu-es-vuJ" id="feR-Db-Ui0"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Settings" image="gearshape.fill" catalog="system" id="Vrh-IC-xsW"/>
                     <connections>
-                        <segue destination="O9B-ZF-oqt" kind="relationship" relationship="rootViewController" id="XhO-Le-Tl3"/>
+                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="logoutSegue" id="su1-Zp-BWF"/>
                     </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bi8-Fe-Ncs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EvP-Zg-x3z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="225" y="564"/>
+            <point key="canvasLocation" x="1111.5942028985507" y="2055.8035714285716"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ConnecTING_CTING" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="BYZ-38-t0r" customClass="ViewController" customModule="ConnecTING_CTING" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -154,9 +271,10 @@
                         <outlet property="usernameTextField" destination="mKc-PL-e4r" id="4C4-K3-h9f"/>
                         <segue destination="Pwn-EC-slV" kind="presentation" identifier="registerSegue" id="DOA-Sh-n2b"/>
                         <segue destination="Wqp-93-HHz" kind="presentation" identifier="passwordSegue" id="xV7-R3-or9"/>
-                        <segue destination="Sr1-jP-PZL" kind="presentation" identifier="loginSegue" id="p4g-EO-8nP"/>
+                        <segue destination="B5L-jj-uXE" kind="presentation" identifier="logintomenuSegue" id="U3x-GS-6ii"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="226" y="-458"/>
         </scene>
@@ -284,6 +402,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="exclamationmark.bubble.fill" catalog="system" width="128" height="110"/>
+        <image name="gearshape.fill" catalog="system" width="128" height="121"/>
+        <image name="questionmark.folder.fill" catalog="system" width="128" height="97"/>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
