--- a/ConnecTING-CTING/Base.lproj/Main.storyboard
+++ b/ConnecTING-CTING/Base.lproj/Main.storyboard
@@ -67,7 +67,7 @@
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LBh-Xc-5YE">
                                             <rect key="frame" x="375.5" y="323.5" width="30.5" height="28.5"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="30.5" id="bVL-Nf-Ikr"/>
+                                                <constraint firstAttribute="width" constant="30.5" id="fI2-24-4mF"/>
                                             </constraints>
                                             <state key="normal" backgroundImage="questionmark.circle" catalog="system"/>
                                             <connections>
@@ -89,7 +89,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" restorationIdentifier="QNAImageView" contentInsetAdjustmentBehavior="never" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="QMn-6y-yZh">
-                                            <rect key="frame" x="12" y="11" width="397" height="196.5"/>
+                                            <rect key="frame" x="0.0" y="11" width="414" height="196.5"/>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="30" id="8az-ts-IHo">
                                                 <size key="itemSize" width="393" height="195"/>
@@ -108,14 +108,14 @@
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TD9-if-Q5E">
                                                                 <rect key="frame" x="0.0" y="-3" width="194" height="194"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="width" constant="194" id="TOz-Ze-QRy"/>
+                                                                    <constraint firstAttribute="width" constant="194" id="Puc-2k-40f"/>
                                                                 </constraints>
                                                             </imageView>
                                                         </subviews>
                                                         <constraints>
-                                                            <constraint firstItem="TD9-if-Q5E" firstAttribute="leading" secondItem="cJ1-BI-YBi" secondAttribute="leading" id="7iH-x3-3D7"/>
-                                                            <constraint firstAttribute="bottom" secondItem="TD9-if-Q5E" secondAttribute="bottom" constant="4" id="fU2-6f-nad"/>
-                                                            <constraint firstItem="TD9-if-Q5E" firstAttribute="top" secondItem="cJ1-BI-YBi" secondAttribute="top" constant="-3" id="gp8-qD-m9U"/>
+                                                            <constraint firstItem="TD9-if-Q5E" firstAttribute="top" secondItem="cJ1-BI-YBi" secondAttribute="top" constant="-3" id="003-KA-NmM"/>
+                                                            <constraint firstItem="TD9-if-Q5E" firstAttribute="leading" secondItem="cJ1-BI-YBi" secondAttribute="leading" id="8Ju-n9-x3M"/>
+                                                            <constraint firstAttribute="bottom" secondItem="TD9-if-Q5E" secondAttribute="bottom" constant="4" id="ENh-JY-3CJ"/>
                                                         </constraints>
                                                     </collectionViewCellContentView>
                                                     <size key="customSize" width="393" height="195"/>
@@ -137,28 +137,28 @@
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="3Ro-5E-GDv" firstAttribute="trailing" secondItem="bfJ-z8-qTx" secondAttribute="trailing" id="8wX-na-9OE"/>
-                                        <constraint firstItem="uTD-pr-Hr2" firstAttribute="top" secondItem="3Ro-5E-GDv" secondAttribute="bottom" constant="13.5" id="DMk-ez-qUZ"/>
-                                        <constraint firstItem="p6w-US-kYj" firstAttribute="top" secondItem="bfJ-z8-qTx" secondAttribute="bottom" constant="61" id="DeX-vN-eyf"/>
-                                        <constraint firstItem="bfJ-z8-qTx" firstAttribute="leading" secondItem="oi6-n6-yda" secondAttribute="leadingMargin" constant="-15" id="EsQ-Bk-3m7"/>
-                                        <constraint firstItem="bfJ-z8-qTx" firstAttribute="trailing" secondItem="uTD-pr-Hr2" secondAttribute="trailing" id="FYp-8N-RaB"/>
-                                        <constraint firstItem="HAT-63-YA8" firstAttribute="top" secondItem="p6w-US-kYj" secondAttribute="bottom" constant="9.5" id="G1v-ds-Z6y"/>
-                                        <constraint firstItem="LBh-Xc-5YE" firstAttribute="leading" secondItem="HAT-63-YA8" secondAttribute="trailing" constant="7" id="Kqc-XU-txL"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="LBh-Xc-5YE" secondAttribute="trailing" constant="-12" id="LWd-6I-bcn"/>
-                                        <constraint firstItem="3Ro-5E-GDv" firstAttribute="top" secondItem="QMn-6y-yZh" secondAttribute="bottom" constant="8" symbolic="YES" id="LbU-a7-apF"/>
-                                        <constraint firstItem="p6w-US-kYj" firstAttribute="top" secondItem="uTD-pr-Hr2" secondAttribute="bottom" constant="9" id="Txo-7p-AvB"/>
-                                        <constraint firstItem="p6w-US-kYj" firstAttribute="leading" secondItem="wSg-0L-oAK" secondAttribute="trailing" constant="6" id="VD1-Bj-2to"/>
-                                        <constraint firstItem="QMn-6y-yZh" firstAttribute="leading" secondItem="oi6-n6-yda" secondAttribute="leadingMargin" constant="-8" id="YYl-uj-cc3"/>
-                                        <constraint firstItem="HAT-63-YA8" firstAttribute="centerY" secondItem="LBh-Xc-5YE" secondAttribute="centerY" constant="8.25" id="ZmD-jg-8dV"/>
-                                        <constraint firstItem="QMn-6y-yZh" firstAttribute="trailing" secondItem="3Ro-5E-GDv" secondAttribute="trailing" id="ev6-PB-RuY"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="HAT-63-YA8" secondAttribute="bottom" constant="-5" id="gXP-jf-Uy5"/>
-                                        <constraint firstItem="LBh-Xc-5YE" firstAttribute="top" secondItem="uTD-pr-Hr2" secondAttribute="bottom" constant="24.5" id="pIc-gQ-CbI"/>
-                                        <constraint firstItem="bfJ-z8-qTx" firstAttribute="top" secondItem="QMn-6y-yZh" secondAttribute="bottom" constant="14" id="qbE-ff-tq5"/>
-                                        <constraint firstItem="bfJ-z8-qTx" firstAttribute="centerX" secondItem="oi6-n6-yda" secondAttribute="centerX" id="rp5-lM-ynY"/>
-                                        <constraint firstItem="wSg-0L-oAK" firstAttribute="leading" secondItem="oi6-n6-yda" secondAttribute="leadingMargin" constant="89" id="vrn-y4-KbS"/>
-                                        <constraint firstItem="HAT-63-YA8" firstAttribute="top" secondItem="wSg-0L-oAK" secondAttribute="bottom" constant="9" id="xDm-5L-Yq1"/>
-                                        <constraint firstItem="QMn-6y-yZh" firstAttribute="top" secondItem="oi6-n6-yda" secondAttribute="topMargin" id="zTV-co-XiA"/>
-                                        <constraint firstItem="bfJ-z8-qTx" firstAttribute="leading" secondItem="uTD-pr-Hr2" secondAttribute="leading" id="zsH-SZ-4TE"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="LBh-Xc-5YE" secondAttribute="bottom" constant="-3.5" id="0M3-Vi-JNH"/>
+                                        <constraint firstItem="bfJ-z8-qTx" firstAttribute="leading" secondItem="oi6-n6-yda" secondAttribute="leadingMargin" constant="-15" id="21E-Yj-iqS"/>
+                                        <constraint firstItem="HAT-63-YA8" firstAttribute="top" secondItem="wSg-0L-oAK" secondAttribute="bottom" constant="9" id="5pW-r3-jUt"/>
+                                        <constraint firstItem="p6w-US-kYj" firstAttribute="baseline" secondItem="wSg-0L-oAK" secondAttribute="firstBaseline" id="72J-Je-PRm"/>
+                                        <constraint firstItem="LBh-Xc-5YE" firstAttribute="leading" secondItem="HAT-63-YA8" secondAttribute="trailing" constant="7" id="ArU-h3-KX8"/>
+                                        <constraint firstItem="LBh-Xc-5YE" firstAttribute="top" secondItem="uTD-pr-Hr2" secondAttribute="bottom" constant="24.5" id="DY3-je-Ed4"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="HAT-63-YA8" secondAttribute="bottom" constant="-5" id="Deb-C1-7jy"/>
+                                        <constraint firstItem="wSg-0L-oAK" firstAttribute="leading" secondItem="oi6-n6-yda" secondAttribute="leadingMargin" constant="89" id="Ebh-BK-uAs"/>
+                                        <constraint firstItem="QMn-6y-yZh" firstAttribute="leading" secondItem="oi6-n6-yda" secondAttribute="leading" id="FmL-mI-Mll"/>
+                                        <constraint firstItem="bfJ-z8-qTx" firstAttribute="top" secondItem="QMn-6y-yZh" secondAttribute="bottom" constant="14" id="GSV-pi-Ifg"/>
+                                        <constraint firstItem="3Ro-5E-GDv" firstAttribute="trailing" secondItem="bfJ-z8-qTx" secondAttribute="trailing" id="JNL-c4-4cP"/>
+                                        <constraint firstItem="QMn-6y-yZh" firstAttribute="top" secondItem="oi6-n6-yda" secondAttribute="topMargin" id="NIK-na-mew"/>
+                                        <constraint firstItem="QMn-6y-yZh" firstAttribute="centerX" secondItem="bfJ-z8-qTx" secondAttribute="centerX" id="PPK-ur-TRd"/>
+                                        <constraint firstItem="p6w-US-kYj" firstAttribute="top" secondItem="bfJ-z8-qTx" secondAttribute="bottom" constant="61" id="bN5-eN-E1L"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="LBh-Xc-5YE" secondAttribute="trailing" constant="-12" id="cUw-aK-7YE"/>
+                                        <constraint firstItem="bfJ-z8-qTx" firstAttribute="trailing" secondItem="uTD-pr-Hr2" secondAttribute="trailing" id="caI-Wz-hdz"/>
+                                        <constraint firstItem="p6w-US-kYj" firstAttribute="leading" secondItem="wSg-0L-oAK" secondAttribute="trailing" constant="6" id="dxJ-J4-Ku3"/>
+                                        <constraint firstItem="p6w-US-kYj" firstAttribute="top" secondItem="uTD-pr-Hr2" secondAttribute="bottom" constant="9" id="lSL-oS-MFP"/>
+                                        <constraint firstAttribute="trailing" secondItem="QMn-6y-yZh" secondAttribute="trailing" id="np3-T4-Vap"/>
+                                        <constraint firstItem="3Ro-5E-GDv" firstAttribute="top" secondItem="QMn-6y-yZh" secondAttribute="bottom" constant="8" symbolic="YES" id="rmh-Td-krf"/>
+                                        <constraint firstItem="bfJ-z8-qTx" firstAttribute="leading" secondItem="uTD-pr-Hr2" secondAttribute="leading" id="vSW-7L-jEL"/>
+                                        <constraint firstItem="uTD-pr-Hr2" firstAttribute="top" secondItem="3Ro-5E-GDv" secondAttribute="bottom" constant="13.5" id="yS2-iV-Vh0"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
